# simple_chat

./: .gitignore  Makefile  README.md  default.env  docker-compose.yml  isi_chat.postman_collection.json  pyproject.toml
src/: db_dump.json  manage.py
src/account/: urls.py
src/app/: asgi.py  urls.py  wsgi.py
src/app/conf/: apps.py  core.py  database.py  locale.py
src/chat/: admin.py  models.py  urls.py
src/chat/api/: serializers.py  views.py
src/chat/migrations/: 0001_initial.py
src/helpers/: permissions.py
